# ENZYME

./: .gitignore  AGENTS.md  BENCHMARK_PRECHECK_RUNBOOK.md  CODEX_HANDOFF_2026-02-15.md  Codex_Prompt_ENZYME_v0_4.txt  Codex_Task_Paper_Benchmark_NatProtocols_vs_Siblings.txt  ENZYME_Codex_Handoff_Summary_v0_4.md  ENZYME_Spec_v0_4.docx  ENZYME_Spec_v0_4.md  LICENSE  README.md  codex_02162026  codex_02172026  extract_pdf_text.py  paper_file_index.csv  protocolsio_to_enzyme_mapping_v0_4.csv  pyproject.toml
enzyme_ir/: schema_core.json  schema_hl.json
examples/: example_cell_passage_core_v0_4.json  example_cell_passage_hl_v0_4.json  example_colony_pcr_core_v0_4.json  example_colony_pcr_hl_v0_4.json  example_transformation_core_v0_4.json  example_transformation_hl_v0_4.json
fixtures/: expected_core.json  expected_hl.json  protocolsio_fixture.json
profiles/: reproducibility_profile.strict.v0_1.json
registry/: registry_v0_4.json
results_probe_v7_full_comparison/: ENZYME_v7_full_report_en.md  ENZYME_v7_full_report_ja.md  ENZYME_v7_full_slides_en.md  ENZYME_v7_full_slides_en.pptx  ENZYME_v7_full_slides_ja.md  ENZYME_v7_full_slides_ja.pptx  ENZYME_v7_manuscript_en.md  ENZYME_v7_manuscript_ja.md  ENZYME_v7_manuscript_slides_en.md  ENZYME_v7_manuscript_slides_en.pptx  ENZYME_v7_manuscript_slides_ja.md  ENZYME_v7_manuscript_slides_ja.pptx  pilot_category_distribution_long.csv  pilot_category_scores_long.csv  pilot_compare_repro_long.csv  pilot_compare_repro_pairwise.csv  pilot_compare_repro_summary.md  pilot_flow_group_summary.csv  pilot_flow_paper_metrics.csv  (+5 more)
(+22735 files in other folders)
