[project]
name = "enzyme"
version = "0.4.0"
description = "ENZYME v0.4 MVP implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ENZYME MVP" }]

dependencies = [
  "pydantic>=2.0",
  "jsonschema>=4.0",
  "pint>=0.23",
  "typer>=0.12",
  "rich>=13.0",
  "networkx>=3.0",
  "pytest>=7.0",
]

[project.scripts]
enzyme = "enzyme.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
